src/kubernetes/infrastructure/longhorn/longhorn-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: longhorn.zinkzone.tech
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.zinkzone.tech`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    certResolver: cloudflare
